--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,10 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-<<<<<<< HEAD
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.14.1",
-=======
-        "laravel/sanctum": "^3.0",
->>>>>>> 74dfb6cec4d2c1f6d7e1a1e29e4bc9d610dc7031
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
